# hs-postgresql-copy-escape

./: postgresql-copy-escape.cabal  postgresql-copy.cabal
Database/PostgreSQL/Copy/: Escape.hs
cbits/: postgresql-copy-escape.c
