name:               postgresql-copy-escape
version:            0.1
synopsis:           Format data to feed to a PostgreSQL COPY FROM statement
-- description:
homepage:           https://github.com/joeyadams/haskell-postgresql-copy-escape
license:            BSD3
license-file:       LICENSE
author:             Joey Adams
maintainer:         joeyadams3.14159@gmail.com
copyright:          Copyright (c) Joseph Adams 2012
category:           Data
build-type:         Simple
cabal-version:      >=1.8

source-repository head
    type:       git
    location:   git://github.com/joeyadams/haskell-postgresql-copy-escape.git

library
    exposed-modules:
        Database.PostgreSQL.Copy.Escape

    c-sources:
        cbits/postgresql-copy-escape.c

    ghc-options: -Wall -O2 -fwarn-tabs

    build-depends   : base == 4.*
                    , bytestring
